spec/lang/library.txt
# TURBO-SPEC-FORMAT-V1

# TITLE
Library

# SHORT
Define custom libraries, access classes in a namespace prefixed form.

# LONG
Define custom libraries, access classes in a namespace prefixed form.


# SYNTAX
.{name} { ...utility }
.{name} {
	{utility...}
}


# ARGUMENT
name string
Name of the class.

# ARGUMENT
utility Utility
Utilities and other classes to be applied.



# EXAMPLE LIBRARY
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
Define a utility called btn in the ui package.
==================================================
[/ui.turbo]
t1
.btn {
	h-32
	px-16
	font-16
}
--------------------------------------------------
--------------------------------------------------
t1 ui.btn
--------------------------------------------------
.t1.ui\.btn {
	height: 32px;
	padding-left: 16px;
	padding-right: 16px;
	font-size: 16px;
}
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


# EXAMPLE LIBRARY
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
Define a utility called btn on a single line.
==================================================
[/ui.turbo]
t1
.btn { h-32 px-16 font-16 }
--------------------------------------------------
--------------------------------------------------
t1 ui.btn
--------------------------------------------------
.t1.ui\.btn {
	height: 32px;
	padding-left: 16px;
	padding-right: 16px;
	font-size: 16px;
}
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


# EXAMPLE LIBRARY
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
Custom utilities can be overriden by system
utilities as they are inserted higher in the
generated CSS.
==================================================
[/ui.turbo]
t1
.btn {
	h-32
	px-16
	font-16
}
--------------------------------------------------
--------------------------------------------------
t1 h-40 ui.btn
--------------------------------------------------
.t1.ui\.btn {
	height: 32px;
	padding-left: 16px;
	padding-right: 16px;
	font-size: 16px;
}
.t1.h-40 {
	height: 40px;
}
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


# EXAMPLE LIBRARY
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
The special library [s] is sorted after system
utilities in the generated CSS.
==================================================
[/s.turbo]
t1
.btn {
	h-32
}
--------------------------------------------------
--------------------------------------------------
t1 h-40 s.btn
--------------------------------------------------
.t1.h-40 {
	height: 40px;
}
.t1.s\.btn {
	height: 32px;
}
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


# EXAMPLE LIBRARY
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
Comments are supported. Comments must be preceeded
by a whitespace char: space, tab or new-line.
They can also be the at the start of the file.
==================================================
[/ui.turbo]
// Comment
t1
.btn { // Comment
	// Comment
	h-32 // Comment
	px-16
	font-16
}
--------------------------------------------------
--------------------------------------------------
t1 ui.btn
--------------------------------------------------
.t1.ui\.btn {
	height: 32px;
	padding-left: 16px;
	padding-right: 16px;
	font-size: 16px;
}
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


# EXAMPLE LIBRARY
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
Turbo utility names are not reserved, they can
be redefined.

The key benefit of this is that you can be sure
future utilities added to the core language will
not break your code.
==================================================
[/ui.turbo]
t1
.font-16 {
	font-32
}
--------------------------------------------------
--------------------------------------------------
t1 ui.font-16
--------------------------------------------------
.t1.ui\.font-16 {
	font-size: 32px;
}
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


# EXAMPLE LIBRARY
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
User defined utilities may reference other user
defined utilities that are defined later.
==================================================
[/ui.turbo]
t1
.font-16 {
	font-32
}
.font-32 {
	font-64
}
--------------------------------------------------
--------------------------------------------------
t1 ui.font-16 ui.font-32
--------------------------------------------------
.t1.ui\.font-16 {
	font-size: 64px;
}
.t1.ui\.font-32 {
	font-size: 64px;
}
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


# EXAMPLE LIBRARY THAT FAILS
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
Utilities can not be defined 2x.
==================================================
[/ui.turbo]
t1
.foo {
	w-16
}
.foo {
	h-8
}
--------------------------------------------------
--------------------------------------------------
t1 ui.foo
--------------------------------------------------
Error: utility [foo] is already defined in library [/ui.turbo]
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


# EXAMPLE LIBRARY
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
Override earlier CSS declarations.
==================================================
[/ui.turbo]
t1
.my-width {
	w-4
	w-8
}
--------------------------------------------------
--------------------------------------------------
t1 ui.my-width
--------------------------------------------------
.t1.ui\.my-width {
	width: 8px;
}
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


# EXAMPLE LIBRARY
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
One user-defined utility may depend on another.
==================================================
[/ui.turbo]
t1
.foo {
	w10:color-black
}
.bar {
	foo
}
--------------------------------------------------
--------------------------------------------------
t1 ui.bar
--------------------------------------------------
@media (min-width: 1024px) {
	.t1.ui\.bar {
		color: #000000;
	}
}
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


# EXAMPLE LIBRARY
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
Merge complex utilities.
==================================================
[/ui.turbo]
t1
.btn-base {
	focus:outline-none
}
.btn-32 {
	h-32
	px-16
	font-16
	b-1-transparent
}
.btn-blue {
	color-white
	bg-c-hex-4080FF
	hover:bg-c-hex-60A0FF
	active:bg-c-hex-2060FF
}
.btn-32-blue {
	btn-base
	btn-32
	btn-blue
}
--------------------------------------------------
--------------------------------------------------
t1 ui.btn-32-blue
--------------------------------------------------
.t1.ui\.btn-32-blue {
	height: 32px;
	padding-left: 16px;
	padding-right: 16px;
	font-size: 16px;
	border: 1px solid transparent;
	color: #FFFFFF;
	background-color: #4080FF;
}
.t1.ui\.btn-32-blue:focus {
	outline-style: none;
}
.t1.ui\.btn-32-blue:hover {
	background-color: #60A0FF;
}
.t1.ui\.btn-32-blue:active {
	background-color: #2060FF;
}
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


# EXAMPLE LIBRARY
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
All combinators are supported.
==================================================
[/ui.turbo]
t1
.foo {
	/color-black
	~color-black
	+color-black
	/../color-black
}
--------------------------------------------------
--------------------------------------------------
t1 ui.foo
--------------------------------------------------
* + .t1.ui\.foo {
	color: #000000;
}
* .t1.ui\.foo {
	color: #000000;
}
* > .t1.ui\.foo {
	color: #000000;
}
* ~ .t1.ui\.foo {
	color: #000000;
}
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


# EXAMPLE LIBRARY
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
All DOM structure selectors are supported.
==================================================
[/ui.turbo]
t1
.foo {
	empty:color-black
	not-empty:color-black
	first:color-black
	not-first:color-black
	last:color-black
	not-last:color-black
	even:color-black
	odd:color-black
}
--------------------------------------------------
--------------------------------------------------
t1 ui.foo
--------------------------------------------------
.t1.ui\.foo:empty {
	color: #000000;
}
.t1.ui\.foo:not(:empty) {
	color: #000000;
}
.t1.ui\.foo:first-child {
	color: #000000;
}
.t1.ui\.foo:not(:first-child) {
	color: #000000;
}
.t1.ui\.foo:last-child {
	color: #000000;
}
.t1.ui\.foo:not(:last-child) {
	color: #000000;
}
.t1.ui\.foo:nth-child(even) {
	color: #000000;
}
.t1.ui\.foo:nth-child(odd) {
	color: #000000;
}
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


# EXAMPLE LIBRARY
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
All interaction selectors are supported.
==================================================
[/ui.turbo]
t1
.foo {
	color-black
	visited:color-black
	focus:color-black
	hover:color-black
	active:color-black
}
--------------------------------------------------
--------------------------------------------------
t1 ui.foo
--------------------------------------------------
.t1.ui\.foo {
	color: #000000;
}
.t1.ui\.foo:visited {
	color: #000000;
}
.t1.ui\.foo:focus {
	color: #000000;
}
.t1.ui\.foo:hover {
	color: #000000;
}
.t1.ui\.foo:active {
	color: #000000;
}
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


# EXAMPLE LIBRARY
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
All state selectors are supported.
==================================================
[/ui.turbo]
t1
.foo {
	checked:color-black
	unchecked:color-black
	enabled:color-black
	disabled:color-black
	valid:color-black
	invalid:color-black
}
--------------------------------------------------
--------------------------------------------------
t1 ui.foo
--------------------------------------------------
.t1.ui\.foo:checked {
	color: #000000;
}
.t1.ui\.foo:not(:checked) {
	color: #000000;
}
.t1.ui\.foo:enabled {
	color: #000000;
}
.t1.ui\.foo:disabled {
	color: #000000;
}
.t1.ui\.foo:valid {
	color: #000000;
}
.t1.ui\.foo:invalid {
	color: #000000;
}
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


# EXAMPLE LIBRARY
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
All pseudo-element selectors are supported.
==================================================
[/ui.turbo]
t1
.foo {
	after:color-black
	before:color-black
	placeholder:color-black
	selection:color-black
	thumb:color-black
}
--------------------------------------------------
--------------------------------------------------
t1 ui.foo
--------------------------------------------------
.t1.ui\.foo:after {
	color: #000000;
	content: "";
}
.t1.ui\.foo:before {
	color: #000000;
	content: "";
}
.t1.ui\.foo::placeholder {
	color: #000000;
}
.t1.ui\.foo::selection {
	color: #000000;
}
.t1.ui\.foo::slider-thumb {
	color: #000000;
}
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


# EXAMPLE LIBRARY
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
All device selectors are supported.
==================================================
[/ui.turbo]
t1
.foo {
	print:color-black
	screen:color-black
	speech:color-black
	hoverable:color-black
	not-hoverable:color-black
}
--------------------------------------------------
--------------------------------------------------
t1 ui.foo
--------------------------------------------------
@media (hover: hover) {
	.t1.ui\.foo {
		color: #000000;
	}
}
@media (hover: none) {
	.t1.ui\.foo {
		color: #000000;
	}
}
@media screen {
	.t1.ui\.foo {
		color: #000000;
	}
}
@media print {
	.t1.ui\.foo {
		color: #000000;
	}
}
@media speech {
	.t1.ui\.foo {
		color: #000000;
	}
}
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


# EXAMPLE LIBRARY
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
All viewport selectors are supported.
==================================================
[/ui.turbo]
t1
.foo {
	w3:color-black
	w6:color-black
	w7:color-black
	w10:color-black
	w12:color-black
	w14:color-black
	w15:color-black
	w19:color-black
}
--------------------------------------------------
--------------------------------------------------
t1 ui.foo
--------------------------------------------------
@media (min-width: 375px) {
	.t1.ui\.foo {
		color: #000000;
	}
}
@media (min-width: 640px) {
	.t1.ui\.foo {
		color: #000000;
	}
}
@media (min-width: 768px) {
	.t1.ui\.foo {
		color: #000000;
	}
}
@media (min-width: 1024px) {
	.t1.ui\.foo {
		color: #000000;
	}
}
@media (min-width: 1280px) {
	.t1.ui\.foo {
		color: #000000;
	}
}
@media (min-width: 1440px) {
	.t1.ui\.foo {
		color: #000000;
	}
}
@media (min-width: 1536px) {
	.t1.ui\.foo {
		color: #000000;
	}
}
@media (min-width: 1920px) {
	.t1.ui\.foo {
		color: #000000;
	}
}
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


# EXAMPLE LIBRARY
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
The order or various selectors may change over
time. This is a simple test case for the current
ordering.
==================================================
[/ui.turbo]
t1
.foo {
	+color-black
	empty:color-black
	focus:color-black
	checked:color-black
	before:color-black
	placeholder:color-black
	print:color-black
	hoverable:color-black
	w10:color-black
}
--------------------------------------------------
--------------------------------------------------
t1 ui.foo
--------------------------------------------------
* + .t1.ui\.foo {
	color: #000000;
}
.t1.ui\.foo:focus {
	color: #000000;
}
.t1.ui\.foo:empty {
	color: #000000;
}
.t1.ui\.foo:before {
	color: #000000;
	content: "";
}
.t1.ui\.foo::placeholder {
	color: #000000;
}
.t1.ui\.foo:checked {
	color: #000000;
}
@media (hover: hover) {
	.t1.ui\.foo {
		color: #000000;
	}
}
@media (min-width: 1024px) {
	.t1.ui\.foo {
		color: #000000;
	}
}
@media print {
	.t1.ui\.foo {
		color: #000000;
	}
}
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


# EXAMPLE LIBRARY
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
Selectors can be applied to user defined
utilities as well.
==================================================
[/ui.turbo]
t1
.foo {
	color-black
}
.bar {
	hover:foo
}
--------------------------------------------------
--------------------------------------------------
t1 w10:ui.bar
--------------------------------------------------
@media (min-width: 1024px) {
	.t1.w10\:ui\.bar:hover {
		color: #000000;
	}
}
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


# EXAMPLE LIBRARY
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
Raw CSS declarations can be added via an `@css`
block.
==================================================
[/ui.turbo]
t1
@css .bg-img-checkbox {
	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 14 14'%3E%3Cpath d='M4 7l2 2m0 0l4-4' fill='none' stroke='%23fff' stroke-linecap='round' stroke-width='2'/%3E%3C/svg%3E");
}
.checkbox {
	w-24 h-24 b-1-black bg-img-checkbox
}
--------------------------------------------------
--------------------------------------------------
t1 ui.checkbox
--------------------------------------------------
.t1.ui\.checkbox {
	width: 24px;
	height: 24px;
	border: 1px solid #000000;
	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 14 14'%3E%3Cpath d='M4 7l2 2m0 0l4-4' fill='none' stroke='%23fff' stroke-linecap='round' stroke-width='2'/%3E%3C/svg%3E");
}
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


# EXAMPLE LIBRARY
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
Raw CSS can be overridden by base utilities.
==================================================
[/ui.turbo]
t1
@css .my-width-32 {
	width: 32px;
}
--------------------------------------------------
--------------------------------------------------
t1
ui.my-width-32
w-32
--------------------------------------------------
.t1.ui\.my-width-32 {
	width: 32px;
}
.t1.w-32 {
	width: 32px;
}
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


# EXAMPLE LIBRARY THAT FAILS
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
Library can not import itself.
==================================================
[/ui.turbo]
t1
.foo {
	w-16
}
.bar {
	ui.foo
}
--------------------------------------------------
--------------------------------------------------
t1 ui.bar
--------------------------------------------------
Error: library can not import itself [/ui.turbo]
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


# EXAMPLE LIBRARY THAT FAILS
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
Disallow circular library dependencies.
==================================================
[/foo.turbo]
t1
.btn {
	bar.size
}
.padding {
	p-0
}
--------------------------------------------------
[/bar.turbo]
t1
.size {
	w-256
	h-40
	foo.padding
}
--------------------------------------------------
--------------------------------------------------
t1 foo.btn
--------------------------------------------------
Error: circular dependency found:
  [/foo.turbo] imports [/bar.turbo]
  [/bar.turbo] imports [/foo.turbo]
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


# EXAMPLE LIBRARY THAT FAILS
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
Disallow circular library dependencies.
==================================================
[/a.turbo]
t1
.btn {
	b.btn
}
--------------------------------------------------
[/b.turbo]
t1
.btn {
	c.btn
}
--------------------------------------------------
[/c.turbo]
t1
.btn {
	d.btn
}
--------------------------------------------------
[/d.turbo]
t1
.btn {
	b.btn
}
--------------------------------------------------
--------------------------------------------------
t1 a.btn
--------------------------------------------------
Error: circular dependency found:
  [/b.turbo] imports [/c.turbo]
  [/c.turbo] imports [/d.turbo]
  [/d.turbo] imports [/b.turbo]
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


# EXAMPLE LIBRARY THAT FAILS
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
Redefining one of the base utilities causes stack
overflow due to the circular reference.
==================================================
[/ui.turbo]
t1
.table {
	table
}
--------------------------------------------------
--------------------------------------------------
t1 ui.table
--------------------------------------------------
Error: stack overflow [32]
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


# EXAMPLE LIBRARY THAT FAILS
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
Circular reference using two class names.
==================================================
[/ui.turbo]
t1
.foo {
	bar
}
.bar {
	foo
}
--------------------------------------------------
--------------------------------------------------
t1 ui.foo
--------------------------------------------------
Error: stack overflow [32]
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


# EXAMPLE LIBRARY
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
User defined utility class names are sorted in
definition order in the generated CSS.
==================================================
[/ui.turbo]
t1
.A1 {
	w-1
}
.A2 {
	w-1
}
.a1 {
	w-1
}
.a2 {
	w-1
}
.zulu {
	w-1
}
.Zulu {
	w-1
}
.apple {
	w-1
}
.Apple {
	w-1
}
--------------------------------------------------
--------------------------------------------------
t1 ui.A1 ui.A2 ui.a1 ui.a2 ui.apple ui.Apple ui.zulu ui.Zulu
--------------------------------------------------
.t1.ui\.A1 {
	width: 1px;
}
.t1.ui\.A2 {
	width: 1px;
}
.t1.ui\.a1 {
	width: 1px;
}
.t1.ui\.a2 {
	width: 1px;
}
.t1.ui\.zulu {
	width: 1px;
}
.t1.ui\.Zulu {
	width: 1px;
}
.t1.ui\.apple {
	width: 1px;
}
.t1.ui\.Apple {
	width: 1px;
}
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


# EXAMPLE LIBRARY
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
The order of user defined utility class names
does not depend on the contained classes.
(Test case 1)
==================================================
[/ui.turbo]
t1
.A1 {
	mt-16
}
.a1 {
	w-full
	p-16
}
--------------------------------------------------
--------------------------------------------------
t1 ui.A1 ui.a1
--------------------------------------------------
.t1.ui\.A1 {
	margin-top: 16px;
}
.t1.ui\.a1 {
	width: 100%;
	padding: 16px;
}
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


# EXAMPLE LIBRARY
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
The order of user defined utility class names
does not depend on the contained classes.
(Test case 2)
==================================================
[/ui.turbo]
t1
.A1 {
	mt-16
}
.a1 {
	p-16
	w-full
}
--------------------------------------------------
--------------------------------------------------
t1 ui.A1 ui.a1
--------------------------------------------------
.t1.ui\.A1 {
	margin-top: 16px;
}
.t1.ui\.a1 {
	padding: 16px;
	width: 100%;
}
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>


